# SC19_in-memory

./: CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.static  LICENSE.txt  Makefile  README.md  cmake_install.cmake  config.h
all-transports/: CMakeLists.txt  Makefile  cmake_install.cmake
all-transports/adios-all/: CMakeLists.txt  Makefile  SENSEIConfig.cmake  adios_adaptor.c  cmake_install.cmake  ds_adaptor.c  ds_adaptor.h
all-transports/adios-all/heat3d-adios/: CMakeLists.txt  explicitPar.c  generate_gif_heat3d.m  heat3d.h  heat3d_adios_con.c  heat3d_adios_prod.c  heat3d_native_con.c  plot_performance_heat3d.m  run_performance_heat3d  updateBound.c
all-transports/adios-all/lammps-adios/: CMakeLists.txt  Makefile  cmake_install.cmake  lammpsBridge.cxx  lammpsBridge.h  lammpsDataAdaptor.cxx  lammpsDataAdaptor.h  lammps_adios_con.cpp  lammps_adios_prod.cpp  lammps_adios_prod.cpp.bak  lammps_adios_prod_scale.cpp  lammps_adios_titan.job  lammps_mpiio_con.cpp  lammps_native_con.cpp  lammps_select.cpp  lammps_sensei_analysis.cpp  lammps_sensei_analysis.h  lammps_sensei_prod.cpp
all-transports/adios-all/lammps-adios/jobs/: lammps_adios_titan_64v32.job  lammps_adios_titan_68v34.job  lammps_adios_titan_dataspaces_tcp_var.job  lammps_adios_titan_dataspaces_var.job  lammps_adios_titan_dimes_var.job  lammps_adios_titan_flexpath_var.job  lammps_adios_titan_mpiio_var.job  lammps_adios_titan_native_dataspaces_tcp_var.job  lammps_adios_titan_native_dataspaces_var.job  lammps_adios_titan_native_dimes_var.job  lammps_adios_titan_var.job.bak  lammps_titan_only.job  lammps_titan_sensei.job  lammps_titan_test.job  qsub_while_dataspaces.sh  qsub_while_dataspaces_tcp.sh  qsub_while_dimes.sh  qsub_while_flexpath.sh  qsub_while_mpiio.sh  qsub_while_native_dataspaces.sh  qsub_while_native_dataspaces_tcp.sh  qsub_while_native_dimes.sh  qsub_while_only.sh  qsub_while_sensei.sh  qsub_while_test.sh  testds  testnewjob  testnewjobv2
all-transports/adios-all/lammps-adios/xmls/: lammps_dataspaces.xml  lammps_dimes.xml  lammps_flexpath.xml  lammps_mpiio.xml
all-transports/adios-all/laplace-adios/: CMakeLists.txt  Makefile  Makefile.bak  cmake_install.cmake  explicitSeq.c  heat3d_adios_prod.c  heat3d_mpiio_con.c  heat3d_native_con.c  laplace_adios_con.c  laplace_adios_prod.c  laplace_adios_prod.c.cori  laplace_mpiio_con.c  laplace_native_con.c  laplace_native_con.c.cori  laplace_native_con_old.c  laplace_sensei_analy.c  laplace_sensei_analy.h  laplace_sensei_analy.old.c  laplace_sensei_simu.c
all-transports/adios-all/laplace-adios/jobs/: lammps_adios_titan.job  lammps_adios_titan_32v16.job  lammps_adios_titan_wrap.job  laplace_adios_titan_dataspaces_tcp_var.job  laplace_adios_titan_dataspaces_var.job  laplace_adios_titan_dimes_tcp_var.job  laplace_adios_titan_dimes_var.job  laplace_adios_titan_flexpath_var.job  laplace_adios_titan_mpiio_var.job  laplace_adios_titan_native_dataspaces_var.job  laplace_adios_titan_native_dimes_var.job  laplace_titan_only.job  laplace_titan_sensei.job  qsub_while_dataspaces.sh  qsub_while_dataspaces_datasize.sh  qsub_while_dimes.sh  qsub_while_dimes_datasize.sh  qsub_while_flexpath.sh  qsub_while_flexpath_datasize.sh  qsub_while_mpiio.sh  qsub_while_native_dataspaces.sh  qsub_while_native_dimes.sh  qsub_while_only.sh  qsub_while_only_datasize.sh  qsub_while_sensei.sh  testnewjob  testnewjobv2
all-transports/adios-all/laplace-adios/xmls/: lammps_dataspaces.xml  lammps_dimes.xml  laplace_dataspaces.xml  laplace_dimes.xml  laplace_flexpath.xml  laplace_mpiio.xml
all-transports/decaf/: CMakeLists.txt  Makefile  cmake_install.cmake  explUtilPar.c  heat3d_decaf.cpp  heat3d_decaf.py  lammps_decaf.cpp  lammps_decaf.py  lammps_decaf_noedge.py  lammps_in.cpp  lammps_out.cpp  laplace_decaf.cpp  laplace_decaf.py  laplace_decaf_noedge.py  laplace_in.cpp  laplace_out.cpp
all-transports/decaf/lammps-jobs/: a.out  lammps_decaf_titan.job  lammps_decaf_titan_noedge_var.job  lammps_decaf_titan_shared_var.job  lammps_decaf_titan_var.job  qsub_while_decaf.sh  qsub_while_decaf_noedge.sh  qsub_while_decaf_shared.sh  testdl.c  testdl_titan.job  testnewjob
all-transports/decaf/laplace-jobs/: hello_titan.job  laplace_decaf_titan_noedge_var.job  laplace_decaf_titan_var.job  qsub_while_decaf.sh  qsub_while_decaf_datasize.sh  qsub_while_decaf_noedge.sh  testnewjob
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake  decaf.cmake
cmake/nmoments-anal/: Makefile  cmake_install.cmake
include/: lammpsBridge.h  lammpsDataAdaptor.h  lammps_sensei_analysis.h
msd-anal/: CMakeLists.txt  Makefile  cmake_install.cmake
nmoments-anal/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  run_analysis.c
scripts/titan/lammps_input/: in.lj.32v16.txt  test.py  test.sh
scripts/titan/lammps_input/16-256z/: in.lj.32v16_128.txt  in.lj.32v16_256.txt  in.lj.32v16_32.txt  in.lj.32v16_64.txt
scripts/titan/lammps_input/4-20/: in.lj.32v16_10.txt  in.lj.32v16_11.txt  in.lj.32v16_12.txt  in.lj.32v16_13.txt  in.lj.32v16_14.txt  in.lj.32v16_15.txt  in.lj.32v16_17.txt  in.lj.32v16_18.txt  in.lj.32v16_19.txt  in.lj.32v16_20.txt  in.lj.32v16_5.txt  in.lj.32v16_6.txt  in.lj.32v16_7.txt  in.lj.32v16_9.txt
scripts/titan/lammps_input/4-64/: in.lj.32v16_32.txt  in.lj.32v16_8.txt
scripts/titan/lammps_input/4-65536/: in.lj.32v16_1024.txt  in.lj.32v16_16.txt  in.lj.32v16_16384.txt  in.lj.32v16_256.txt  in.lj.32v16_4096.txt  in.lj.32v16_64.txt  in.lj.32v16_65536.txt
scripts/titan/lammps_input/8-128y/: in.lj.32v16_128.txt  (+3 more)
scripts/titan/lammps_input_old/: in.lj.1024v512.txt  in.lj.128v64.txt  in.lj.16384v8192.txt  in.lj.2048v1024.txt  in.lj.256v128.txt  in.lj.4096v2048.txt  in.lj.512v256.txt  in.lj.8192v4096.txt  in.lj.96v32.txt
scripts/titan/laplace_input/: param1024v1024  param1024v512  param2048v1024  param2048v2048  param256v256  param4096v2048  param512v256  param512v512  paramv
tests/: CMakeLists.txt  Makefile  cmake_install.cmake
tests/test-lammps/: CMakeLists.txt  Makefile  cmake_install.cmake  in.melt  lammps_test_titan.job  test_lammps.cpp  test_lammps_mpi.cpp  test_mpi.job
